eval/runs/basic_pacha_on_spagila/medium/9
=== INPUT ===
show me full names of employees who handled a transaction along with the id of

the rental transaction, for all rentals handled by an employee no longer working here.

i.e. one entry per rental, with above info pleas.

=== OUTPUT ===

=== QUERY PLAN ===
To add context to this conversation, I need to retrieve data from the database. Specifically, I need to retrieve the full names of employees who handled a transaction, along with the ID of the rental transaction, for all rentals handled by an employee no longer working here.

Here is the Python script to retrieve the required data:
```
data = executor.get_from_database("""
    SELECT t.id, CONCAT(te.first_name, ', te.last_name) AS full_name
    FROM trans t
    JOIN team te ON t.staff_id = te.id
    WHERE te.active = FALSE
""")
executor.output(f"Rental Transactions handled by inactive employees:\n{data}")
```
This script retrieves the `id` from the `trans` table and the full name (concatenated from `first_name` and `last_name`) from the `team` table, where the `staff_id` in `trans` matches the `id` in `team` and the `active` status of the employee is `FALSE`. The result is a list of rental transactions handled by inactive employees, with each entry containing the rental transaction ID and the full name of the employee who handled it.
=== EXECUTION RESULT ===
Traceback (most recent call last):
  File "<string>", line 1, in <module>
  File "/Users/abhg/hasura/ai-engine/pacha/query_planner/query_planner.py", line 26, in get_from_database
    return self.data_engine.execute_sql(sql)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/abhg/hasura/ai-engine/pacha/data_engine/data_engine.py", line 34, in execute_sql
    cursor.execute(f"SELECT json_agg(t) FROM ({sql.strip(";")}) AS t")
psycopg2.errors.SyntaxError: unterminated quoted string at or near "', te.last_name) AS full_name
    FROM trans t
    JOIN team te ON t.staff_id = te.id
    WHERE te.active = FALSE
) AS t"
LINE 2:     SELECT t.id, CONCAT(te.first_name, ', te.last_name) AS f...
                                               ^

